# Indie-Studio

./: CMakeLists.txt  README.md  launch.ps1  launch.sh  tworepo
assets/maps/map1/: map1.txt
assets/objects/: bomb.iqm  bombAnimation.iqm  player.iqm  playerAnimation.iqm
server/src/: main.py  tcp_server.py  udp_server.py
server/src/Instances/: Subs.py
server/src/Sockets/: UDP.py
server/src/phases/TCP/: initialization.py  lobby.py  subs.py
server/src/phases/UDP/: game.py
server/tests/TCP/: client.py
server/tests/UDP/: client.py
src/: GlobalArchitecture.hpp  SceneManager.cpp  SceneManager.hpp  main.cpp  main.hpp
src/Client/: Client.cpp  Client.hpp
src/ECS/: ECS_namespace.hpp
src/ECS/Components/: AButton.cpp  AButton.hpp  ACursor.cpp  ACursor.hpp  ADestroyable.cpp  ADestroyable.hpp  Effect.cpp  Effect.hpp  Map3D.cpp  Map3D.hpp  Model3D.cpp  Model3D.hpp  Timer.cpp  Timer.hpp
src/ECS/Systems/: Clickable.cpp  Clickable.hpp  Collider.cpp  Collider.hpp  Drawable.hpp  Movable2D.cpp  Movable2D.hpp  Movable3D.cpp  Movable3D.hpp  Object2D.cpp  Object2D.hpp  Object3D.cpp  Object3D.hpp
src/Lib/: Lib_namespace.hpp  MyCamera.cpp  MyCamera.hpp  MyEasing.cpp  MyEasing.hpp  MyEvent.cpp  MyEvent.hpp  MyImage.cpp  MyImage.hpp  MyMesh.cpp  MyMesh.hpp  MyModel.cpp  MyModel.hpp  MyText.cpp  MyText.hpp  MyTexture.cpp  MyTexture.hpp  MyTransform.cpp  MyTransform.hpp  MyWindow.cpp  MyWindow.hpp
src/Lib/Audio/: MyAudio.cpp  MyAudio.hpp  MyMusic.cpp  MyMusic.hpp  MySound.cpp  MySound.hpp
src/Lib/Shapes/: MyRectangle.cpp  MyRectangle.hpp
src/Menu/: Character.cpp  Character.hpp
src/Objects/: MainCamera.cpp  MainCamera.hpp  MapManager.cpp  MapManager.hpp  Objects_namespace.hpp
src/Objects/Animations/: GameIntro.cpp  GameIntro.hpp  GameOutro.cpp  GameOutro.hpp
src/Objects/Buttons/: Add.cpp  Add.hpp  Back.cpp  Back.hpp  BackSetting.cpp  BackSetting.hpp  Battle.cpp  Battle.hpp  Change.cpp  Change.hpp  Delete.cpp  Delete.hpp  Fps.cpp  Fps.hpp  GameButton.cpp  GameButton.hpp  LoadGame.cpp  LoadGame.hpp  Local.cpp  Local.hpp  NewGame.cpp  NewGame.hpp  Online.cpp  Online.hpp  Quit.cpp  Quit.hpp  Setting.cpp  Setting.hpp  Title.cpp  Title.hpp
src/Objects/Cursor/: SoundSetting.cpp  SoundSetting.hpp  fpsSetting.cpp  fpsSetting.hpp
src/Objects/Interactables/: APlayer.cpp  APlayer.hpp  Bomb.cpp  Bomb.hpp  DestroyableWall.cpp  DestroyableWall.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp
src/Objects/Interactables/AI/: AI.cpp  AI.hpp  AIUtils.cpp  AI_PathFinding.cpp  FindNearetPlayerCollider.cpp  IsAISafe.cpp  IsColliderSafe.cpp  easyAI.cpp  intermediateAI.cpp  mediumAI.cpp
src/Objects/UI/: PlayerInfo.cpp  PlayerInfo.hpp
src/Scenes/: AScene.cpp  AScene.hpp  Factory.hpp  GameScene.cpp  GameScene.hpp  IScene.hpp  LevelScene.cpp  LevelScene.hpp  LobbyScene.cpp  LobbyScene.hpp  MenuScene.cpp  MenuScene.hpp  PauseScene.cpp  PauseScene.hpp  SceneNamespace.hpp  Scenes.hpp  SettingScene.cpp  SettingScene.hpp  SplashScene.cpp  SplashScene.hpp
src/Utils/: FileManager.cpp  FileManager.hpp
